chore: add project config and tooling
Biome, Drizzle Kit, wrangler, OpenNext, Tailwind, tsconfig,
package.json with all scripts, and public assets.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
+# Dependencies
+node_modules/
+bun.lock
+
+# Next.js
+.next/
+out/
+
+# OpenNext / Cloudflare
+.open-next/
+dist/
+
+# Secrets
+.dev.vars
+*.env
+.env.*
+!.env.example
+
+# Build
+dist/
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Editor
+.idea/
+*.swp
+*.swo
+
+# OMC
 .omc/
+
+/worker.ts
+.wrangler/
