feat(ci): update CI workflow to check for test files before running tests and adjust formatting command feat(auth): modify getCloudflareContext call to support async operation feat(types): add worker-configuration.d.ts to augment CloudflareEnv interface

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
       - run: bun install --frozen-lockfile
-      - run: bunx biome format --check .
+      - run: bunx biome format .
 
   typecheck:
     name: Typecheck
@@ -41,7 +41,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
       - run: bun install --frozen-lockfile
-      - run: bun test
+      - name: Run tests
+        run: |
+          if find . -not -path '*/node_modules/*' \( -name "*.test.ts" -o -name "*.spec.ts" \) | grep -q .; then
+            bun test
+          else
+            echo "No test files found, skipping"
+          fi
 
   migrate:
     name: Migration Test
