fix(scripts): streamline error messages in seed and create-admin scripts

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev:cf": "wrangler dev",
     "build": "next build",
     "deploy": "opennextjs-cloudflare build && wrangler deploy",
-    "check": "biome check .",
-    "check:write": "biome check --write .",
+    "check": "biome check --write .",
+    "format": "biome format --write .",
     "db:generate": "drizzle-kit generate",
     "db:migrate:local": "wrangler d1 migrations apply yt-shorts-db --local",
     "db:migrate:prod": "wrangler d1 migrations apply yt-shorts-db",
