--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,7 @@
     },
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "types": ["@cloudflare/workers-types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "worker.ts", "scripts"]
+  "exclude": ["node_modules", "open-next.config.ts", "scripts"]
 }
